ZPM Install in kotlin component bits