@@ -21,17 +21,20 @@
     <maven.version>3.9.6</maven.version>
     <maven.resolver.version>2.0.3</maven.resolver.version>
     <kotlin.version>2.1.21</kotlin.version>
+    <java.version>21</java.version>
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
+    <!-- <kotlin.compiler.incremental>true</kotlin.compiler.incremental> -->
   </properties>
 
+<repositories>
+    <repository>
+        <id>jitpack.io</id>
+        <url>https://jitpack.io</url>
+    </repository>
+</repositories>
+
   <dependencies>
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter</artifactId>
-        <version>5.10.1</version>
-        <scope>test</scope>
-    </dependency>
     <dependency>
       <groupId>com.github.rvesse</groupId>
       <artifactId>airline</artifactId>
@@ -129,7 +132,7 @@
     </dependency>
     <dependency>
         <groupId>com.github.ajalt.clikt</groupId>
-        <artifactId>clikt</artifactId>
+        <artifactId>clikt-jvm</artifactId>
         <version>5.0.3</version>
     </dependency>
     <dependency>
@@ -142,9 +145,18 @@
       <artifactId>arrow-fx-coroutines</artifactId>
       <version>2.1.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.github.ajalt.clikt/clikt -->
+    <dependency>
+      <groupId>com.github.ajalt.clikt</groupId>
+      <artifactId>clikt</artifactId>
+      <version>5.0.3</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 
   <build>
+    <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
+  <testSourceDirectory>${project.basedir}/src/test/kotlin</testSourceDirectory>
     <plugins>
    <plugin>
   <groupId>org.jetbrains.kotlin</groupId>
@@ -154,25 +166,31 @@
     <execution>
       <id>compile</id>
       <goals>
-        <goal>compile</goal>
+      <goal>compile</goal>
       </goals>
-                  <configuration>
-                <sourceDirs>
-                    <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
-                    <sourceDir>${project.basedir}/src/main/java</sourceDir>
-                </sourceDirs>
-            </configuration>
+      <configuration>
+      <sourceDirs>
+      <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
+      <sourceDir>${project.basedir}/src/main/java</sourceDir>
+      </sourceDirs>
+      </configuration>
     </execution>
     <execution>
       <id>test-compile</id>
       <goals>
-        <goal>test-compile</goal>
+      <goal>test-compile</goal>
       </goals>
+          <configuration>
+          <testSourceDirs>
+          <testSourceDir>${project.basedir}/src/test/kotlin</testSourceDir>
+          <testSourceDir>${project.basedir}/src/test/java</testSourceDir>
+          </testSourceDirs>
+          </configuration>
     </execution>
   </executions>
-  <configuration>
-    <jvmTarget>21</jvmTarget>
-  </configuration>
+      <configuration>
+        <jvmTarget>21</jvmTarget>
+      </configuration>
 </plugin>
 
       <!-- <plugin>
@@ -189,16 +207,56 @@
         </configuration>
       </plugin> -->
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
-        <configuration>
-          <excludes>org/apache/ivy/**</excludes>
-        </configuration>
+        <version>3.1.2</version>
+        <executions>
+          <execution>
+            <id>validate</id>
+            <phase>validate</phase>
+            <goals>
+              <goal>check</goal>
+            </goals>
+            <configuration>
+              <skip>true</skip>
+            </configuration>
+          </execution>
+        </executions>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.5.1</version>
+        <executions>
+          <!-- Replacing default-compile as it is treated specially by Maven -->
+          <execution>
+            <id>default-compile</id>
+            <phase>none</phase>
+          </execution>
+          <!-- Replacing default-testCompile as it is treated specially by Maven -->
+          <execution>
+            <id>default-testCompile</id>
+            <phase>none</phase>
+          </execution>
+          <execution>
+            <id>java-compile</id>
+            <phase>compile</phase>
+            <goals>
+              <goal>compile</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>java-test-compile</id>
+            <phase>test-compile</phase>
+            <goals>
+              <goal>testCompile</goal>
+            </goals>
+          </execution>
+        </executions>
           <configuration>
           <compilerArgs>
+            <arg>--add-modules</arg>
+            <arg>jdk.jdeps</arg>
             <arg>-Xlint:unchecked</arg>
             <arg>--add-reads</arg>
             <arg>manager=ALL-UNNAMED</arg>
